--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1,4 +1,5 @@
-{"myAccount": "Мій акаунт",
+{
+  "myAccount": "Мій акаунт",
   "logIn": "Ввійти",
   "signUp": "Реєстрація",
   "settings": "Налаштування",
@@ -10,5 +11,19 @@
   "aboutApp": "Про додаток",
   "contacts": "Контактна інформація",
   "phone": "Телефон",
-  "address": "Адреса"
+  "address": "Адреса",
+  "basket": "Кошик",
+  "emptyBasket": "Ваш кошик порожній",
+  "letsChose": "Ходімо щось виберемо!",
+  "haveAccount": "Вже маєте акаунт?",
+  "loginPlease": "Залогуйтесь, щоб синхронізувати власний кошик на різних ваших девайсах.",
+  "enterEmail": "або введи свій e-mail",
+  "email": "e-mail",
+  "password": "password",
+  "forgotPassword": "Забули пароль?",
+  "agreeWith": "Користуючись додатком ви погоджуєтесь з ",
+  "rules": "Правилами магазину",
+  "validation": "*мінімально 8 символів,включаючи одну велику літеру",
+  "commercialInfo": "Хочу отримувати комерційну інформацію від магазину на вказану електронну адресу",
+  "makeAccount": "Створити акаунт"
 }
