--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -10,5 +10,13 @@
   "aboutApp": "Про додаток",
   "contacts": "Контактна інформація",
   "phone": "Телефон",
-  "address": "Адреса"
+  "address": "Адреса",
+
+  "favorite": "Мій вибір",
+  "addProducts": "Додавайте товари до закладки за допомогою",
+  "bookmark":  "Закладка мій вибір порожня",
+  "haveAccount": "Вже маєте акаунт?t",
+  "logInFavouriteScreen": "Увійдіть в свій акаунт,щоб синхронізувати закладку мій вибір на різних девайсах.",
+  "noAccount": "Ви досі не маєте акаунту?",
+  "advantageOfSpecialOffers": "Зареєструйтесь та скористуйтесь спеціальними пропозиціям для клієнтів з аккаунтом "
 }
