--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -15,8 +15,14 @@
   "favorite": "Мій вибір",
   "addProducts": "Додавайте товари до закладки за допомогою",
   "bookmark":  "Закладка мій вибір порожня",
-  "haveAccount": "Вже маєте акаунт?t",
+  "haveAccount": "Вже маєте акаунт?",
   "logInFavouriteScreen": "Увійдіть в свій акаунт,щоб синхронізувати закладку мій вибір на різних девайсах.",
   "noAccount": "Ви досі не маєте акаунту?",
-  "advantageOfSpecialOffers": "Зареєструйтесь та скористуйтесь спеціальними пропозиціям для клієнтів з аккаунтом "
+  "advantageOfSpecialOffers": "Зареєструйтесь та скористуйтесь спеціальними пропозиціям для клієнтів з аккаунтом ",
+
+  "size":"Розмір: ",
+  "color": "Колір: ",
+  "removeFromFavorite":"Товар усунено з Мій вибір",
+  "addToFavorite":"Товар додано до закладки Мій вибір",
+  "inBasket": "У кошик"
 }
